// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`packem node exports > cjs-interop > should output 'default export with multi named export' correctly when cjsInterop > cjs dts output 1`] = `
"// @ts-ignore
test;
export { test2, test3, test4, test5 };
declare namespace test {
    export const test: () => string;
    export const test2 = "this should be in final bundle";
    export const test3 = "this should be in final bundle";
    export const test4 = "this should be in final bundle";
    export const test5 = "this should be in final bundle";
    import _default = test;
    export { _default as default };
}
export = test;
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with multi named export' correctly when cjsInterop > cjs output 1`] = `
"Object.defineProperties(exports, {
	__esModule: { value: true },
	[Symbol.toStringTag]: { value: "Module" }
});
//#region src/index.ts
const test = () => {
	return "this should be in final bundle";
};
const test2 = "this should be in final bundle";
const test3 = "this should be in final bundle";
const test4 = "this should be in final bundle";
const test5 = "this should be in final bundle";
//#endregion
exports.default = test;
exports.test2 = test2;
exports.test3 = test3;
exports.test4 = test4;
exports.test5 = test5;
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with multi named export' correctly when cjsInterop > dts output 1`] = `
"// @ts-ignore
test;
export { test2, test3, test4, test5 };
declare namespace test {
    export const test: () => string;
    export const test2 = "this should be in final bundle";
    export const test3 = "this should be in final bundle";
    export const test4 = "this should be in final bundle";
    export const test5 = "this should be in final bundle";
    import _default = test;
    export { _default as default };
}
export = test;
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with multi named export' correctly when cjsInterop > mjs dts output 1`] = `
"declare const test: () => string;
declare const test2 = "this should be in final bundle";
declare const test3 = "this should be in final bundle";
declare const test4 = "this should be in final bundle";
declare const test5 = "this should be in final bundle";
export { test as default, test2, test3, test4, test5 };
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with multi named export' correctly when cjsInterop > mjs output 1`] = `
"//#region src/index.ts
const test = () => {
	return "this should be in final bundle";
};
const test2 = "this should be in final bundle";
const test3 = "this should be in final bundle";
const test4 = "this should be in final bundle";
const test5 = "this should be in final bundle";
//#endregion
export { test as default, test2, test3, test4, test5 };
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with named export' correctly when cjsInterop > cjs dts output 1`] = `
"// @ts-ignore
test;
export { test2 };
declare namespace test {
    export const test: () => string;
    export const test2 = "this should be in final bundle";
    import _default = test;
    export { _default as default };
}
export = test;
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with named export' correctly when cjsInterop > cjs output 1`] = `
"Object.defineProperties(exports, {
	__esModule: { value: true },
	[Symbol.toStringTag]: { value: "Module" }
});
//#region src/index.ts
const test = () => {
	return "this should be in final bundle";
};
const test2 = "this should be in final bundle";
//#endregion
exports.default = test;
exports.test2 = test2;
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with named export' correctly when cjsInterop > dts output 1`] = `
"// @ts-ignore
test;
export { test2 };
declare namespace test {
    export const test: () => string;
    export const test2 = "this should be in final bundle";
    import _default = test;
    export { _default as default };
}
export = test;
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with named export' correctly when cjsInterop > mjs dts output 1`] = `
"declare const test: () => string;
declare const test2 = "this should be in final bundle";
export { test as default, test2 };
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with named export' correctly when cjsInterop > mjs output 1`] = `
"//#region src/index.ts
const test = () => {
	return "this should be in final bundle";
};
const test2 = "this should be in final bundle";
//#endregion
export { test as default, test2 };
"
`;

exports[`packem node exports > cjs-interop > should output 'default export' correctly and dont transform dts when cjsInterop > cjs output 1`] = `
"const test = () => "this should be in final bundle";

module.exports = test;
"
`;

exports[`packem node exports > cjs-interop > should output 'default export' correctly and dont transform dts when cjsInterop > mjs output 1`] = `
"const test = () => "this should be in final bundle";

export { test as default };
"
`;

exports[`packem node exports > should generate correct chunks names, when chunk per export is generated > index.cjs output 1`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const require_package = require('./package.cjs');
exports.packageA = require_package.packageA;
"
`;

exports[`packem node exports > should generate correct chunks names, when chunk per export is generated > index.mjs output 1`] = `
"import { packageA } from './package.mjs';
export { packageA };
"
`;

exports[`packem node exports > should generate correct chunks names, when chunk per export is generated > package.cjs output 1`] = `
"Object.defineProperties(exports, {
	__esModule: { value: true },
	[Symbol.toStringTag]: { value: "Module" }
});
const packageA = () => "This is a named export";
const d = "This is a default export";

exports.default = d;
exports.packageA = packageA;
"
`;

exports[`packem node exports > should generate correct chunks names, when chunk per export is generated > package.mjs output 1`] = `
"const packageA = () => "This is a named export";
const d = "This is a default export";

export { d as default, packageA };
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension > cjs dts output 1`] = `
"declare const test = "test content";
export = test;
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension > cjs output 1`] = `
"//#region src/index.ts
const test = "test content";
//#endregion
module.exports = test;
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension > dts output 1`] = `
"declare const test = "test content";
export = test;
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension > mjs dts output 1`] = `
"declare const test = "test content";
export { test as default };
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension > mjs output 1`] = `
"//#region src/index.ts
const test = "test content";
//#endregion
export { test as default };
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension - case 2 > cjs dts output 1`] = `
"declare const test = "test content";
export = test;
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension - case 2 > cjs output 1`] = `
"//#region src/index.ts
const test = "test content";
//#endregion
module.exports = test;
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension - case 2 > dts output 1`] = `
"declare const test = "test content";
export = test;
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension - case 2 > mjs dts output 1`] = `
"declare const test = "test content";
export { test as default };
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension - case 2 > mjs output 1`] = `
"//#region src/index.ts
const test = "test content";
//#endregion
export { test as default };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly > cjs dts output 1`] = `
"declare class Parent {
  constructor();
}
declare class Feature {
  constructor();
}
declare class Child extends Parent {
  feature: Feature;
  constructor();
}
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly > cjs output 1`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
//#region src/index.ts
var Parent = class {
	constructor() {}
};
var Feature = class {
	constructor() {}
};
var Child = class extends Parent {
	constructor() {
		console.log("before");
		super();
		this.feature = new Feature();
		console.log("after");
	}
};
//#endregion
exports.Child = Child;
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly > dts output 1`] = `
"declare class Parent {
  constructor();
}
declare class Feature {
  constructor();
}
declare class Child extends Parent {
  feature: Feature;
  constructor();
}
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly > mjs dts output 1`] = `
"declare class Parent {
  constructor();
}
declare class Feature {
  constructor();
}
declare class Child extends Parent {
  feature: Feature;
  constructor();
}
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly > mjs output 1`] = `
"//#region src/index.ts
var Parent = class {
	constructor() {}
};
var Feature = class {
	constructor() {}
};
var Child = class extends Parent {
	constructor() {
		console.log("before");
		super();
		this.feature = new Feature();
		console.log("after");
	}
};
//#endregion
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly when minify is used > cjs dts output 1`] = `
"declare class Parent {
  constructor();
}
declare class Feature {
  constructor();
}
declare class Child extends Parent {
  feature: Feature;
  constructor();
}
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly when minify is used > cjs output 1`] = `
"Object.defineProperty(exports,Symbol.toStringTag,{value:\`Module\`});var e=class{constructor(){}},t=class{constructor(){}},n=class extends e{constructor(){console.log(\`before\`),super(),this.feature=new t,console.log(\`after\`)}};exports.Child=n;
//# sourceMappingURL=index.cjs.map"
`;

exports[`packem node exports > should output 'class' with 'extends correctly when minify is used > dts output 1`] = `
"declare class Parent {
  constructor();
}
declare class Feature {
  constructor();
}
declare class Child extends Parent {
  feature: Feature;
  constructor();
}
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly when minify is used > mjs dts output 1`] = `
"declare class Parent {
  constructor();
}
declare class Feature {
  constructor();
}
declare class Child extends Parent {
  feature: Feature;
  constructor();
}
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly when minify is used > mjs output 1`] = `
"var e=class{constructor(){}},t=class{constructor(){}},n=class extends e{constructor(){console.log(\`before\`),super(),this.feature=new t,console.log(\`after\`)}};export{n as Child};
//# sourceMappingURL=index.mjs.map"
`;

exports[`packem node exports > should output 'default export' correctly > cjs output 1`] = `
"const test = "this should be in final bundle";

module.exports = test;
"
`;

exports[`packem node exports > should output 'default export' correctly > mjs output 1`] = `
"const test = "this should be in final bundle";

export { test as default };
"
`;

exports[`packem node exports > should output 'default export' for nested folder correctly > cjs output 1`] = `
"const test = "this should be in final bundle";

module.exports = test;
"
`;

exports[`packem node exports > should output 'default export' for nested folder correctly > mjs output 1`] = `
"const test = "this should be in final bundle";

export { test as default };
"
`;
